Add initial info

--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,17 @@
-title: John Doe # your name (or website title) here
+title: Abraham Paniagua # your name (or website title) here
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  Senior Software Engineer with over 10 years of engineering experience. 
+
   <br><br>
-  Second description 
+  Correlation One Fellow 
   <br><br>
-  <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
+
+  <br><br>
+  Data Science and Analytics Portfolio
+  <br><br>
+  
+  <a href="https://www.linkedin.com/in/abraham-paniagua/">View My LinkedIn Profile</a> 
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
