--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Abraham Paniagua # your name (or website title) here
-logo: "/images/profile.png?raw=true" # your photo (or logo) here
+logo: "/images/profile-min.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Senior Software Engineer with over 10 years of engineering experience. 
 
